--- a/package.json
+++ b/package.json
@@ -1,18 +1,7 @@
 {
-  "name": "application-name",
+  "name": "tenaga",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "start": "node app.js"
-  },
-
-  "engine": {
-    "node": "v0.10.x",
-    "npm": "1.3.x"
-  },
-  "dependencies": {
-    "express": "3.3.4",
-    "ejs": "*",
-    "mongodb": "*" //←使用するモジュールを追加しておく
   }
 }
