--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tenaga",
   "version": "0.0.1",
   "scripts": {
-    "start": "node ."
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.16.3"
