--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "date-utils": "^1.2.21",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "node-schedule": "^1.3.0",
